src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_sparse_csc_tensor(value ccol_indices, value row_indices, value values, int options_kind, int options_device);
value atg_sparse_csc_tensor_ccol_row_value_size(value ccol_indices, value row_indices, value values, value size, int options_kind, int options_device);
value atg_sparse_csr_tensor(value crow_indices, value col_indices, value values, int options_kind, int options_device);
value atg_sparse_csr_tensor_crow_col_value_size(value crow_indices, value col_indices, value values, value size, int options_kind, int options_device);
value atg_sparse_dim(value self);
value atg_sparse_mask(value self, value mask);
value atg_sparse_mask_out(value out, value self, value mask);
value atg_sparse_resize(value self, value size, int64_t sparse_dim, int64_t dense_dim);
value atg_sparse_resize_(value self, value size, int64_t sparse_dim, int64_t dense_dim);
value atg_sparse_resize_and_clear(value self, value size, int64_t sparse_dim, int64_t dense_dim);
value atg_sparse_resize_and_clear_(value self, value size, int64_t sparse_dim, int64_t dense_dim);
value atg_sparse_resize_and_clear_out(value out, value self, value size, int64_t sparse_dim, int64_t dense_dim);
value atg_sparse_resize_out(value out, value self, value size, int64_t sparse_dim, int64_t dense_dim);
value atg_sparse_sampled_addmm(value self, value mat1, value mat2, value beta, value alpha);
value atg_sparse_sampled_addmm_out(value out, value self, value mat1, value mat2, value beta, value alpha);
value atg_special_airy_ai(value x);
value atg_special_airy_ai_out(value out, value x);
value atg_special_bessel_j0(value self);
value atg_special_bessel_j0_out(value out, value self);
value atg_special_bessel_j1(value self);
value atg_special_bessel_j1_out(value out, value self);
value atg_special_bessel_y0(value self);
value atg_special_bessel_y0_out(value out, value self);
value atg_special_bessel_y1(value self);
value atg_special_bessel_y1_out(value out, value self);
value atg_special_chebyshev_polynomial_t(value x, value n);
value atg_special_chebyshev_polynomial_t_n_scalar(value x, value n);
value atg_special_chebyshev_polynomial_t_n_scalar_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_t_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_t_x_scalar(value x, value n);
value atg_special_chebyshev_polynomial_t_x_scalar_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_u(value x, value n);
value atg_special_chebyshev_polynomial_u_n_scalar(value x, value n);
value atg_special_chebyshev_polynomial_u_n_scalar_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_u_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_u_x_scalar(value x, value n);
value atg_special_chebyshev_polynomial_u_x_scalar_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_v(value x, value n);
value atg_special_chebyshev_polynomial_v_n_scalar(value x, value n);
value atg_special_chebyshev_polynomial_v_n_scalar_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_v_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_v_x_scalar(value x, value n);
value atg_special_chebyshev_polynomial_v_x_scalar_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_w(value x, value n);
value atg_special_chebyshev_polynomial_w_n_scalar(value x, value n);
value atg_special_chebyshev_polynomial_w_n_scalar_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_w_out(value out, value x, value n);
value atg_special_chebyshev_polynomial_w_x_scalar(value x, value n);
value atg_special_chebyshev_polynomial_w_x_scalar_out(value out, value x, value n);
value atg_special_digamma(value self);
value atg_special_digamma_out(value out, value self);
value atg_special_entr(value self);
value atg_special_entr_out(value out, value self);
value atg_special_erf(value self);
value atg_special_erf_out(value out, value self);
value atg_special_erfc(value self);
value atg_special_erfc_out(value out, value self);
value atg_special_erfcx(value self);
value atg_special_erfcx_out(value out, value self);
value atg_special_erfinv(value self);
value atg_special_erfinv_out(value out, value self);
value atg_special_exp2(value self);
value atg_special_exp2_out(value out, value self);
value atg_special_expit(value self);
value atg_special_expit_out(value out, value self);
value atg_special_expm1(value self);
value atg_special_expm1_out(value out, value self);
value atg_special_gammainc(value self, value other);
value atg_special_gammainc_out(value out, value self, value other);
value atg_special_gammaincc(value self, value other);
value atg_special_gammaincc_out(value out, value self, value other);
value atg_special_gammaln(value self);
value atg_special_gammaln_out(value out, value self);
value atg_special_hermite_polynomial_h(value x, value n);
value atg_special_hermite_polynomial_h_n_scalar(value x, value n);
value atg_special_hermite_polynomial_h_n_scalar_out(value out, value x, value n);