src/bindings/torch_bindings_generated6.ml


  let stubs_sparse_csc_tensor =
    foreign
      "atg_sparse_csc_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_sparse_csc_tensor_ccol_row_value_size =
    foreign
      "atg_sparse_csc_tensor_ccol_row_value_size"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_sparse_csr_tensor =
    foreign
      "atg_sparse_csr_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_sparse_csr_tensor_crow_col_value_size =
    foreign
      "atg_sparse_csr_tensor_crow_col_value_size"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_sparse_dim = foreign "atg_sparse_dim" (gc_tensor @-> returning int64_t)

  let stubs_sparse_mask =
    foreign "atg_sparse_mask" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_sparse_mask_out =
    foreign
      "atg_sparse_mask_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_sparse_resize =
    foreign
      "atg_sparse_resize"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_sparse_resize_ =
    foreign
      "atg_sparse_resize_"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_sparse_resize_and_clear =
    foreign
      "atg_sparse_resize_and_clear"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_sparse_resize_and_clear_ =
    foreign
      "atg_sparse_resize_and_clear_"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_sparse_resize_and_clear_out =
    foreign
      "atg_sparse_resize_and_clear_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_sparse_resize_out =
    foreign
      "atg_sparse_resize_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_sparse_sampled_addmm =
    foreign
      "atg_sparse_sampled_addmm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_sparse_sampled_addmm_out =
    foreign
      "atg_sparse_sampled_addmm_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_special_airy_ai =
    foreign "atg_special_airy_ai" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_airy_ai_out =
    foreign "atg_special_airy_ai_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_bessel_j0 =
    foreign "atg_special_bessel_j0" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_bessel_j0_out =
    foreign "atg_special_bessel_j0_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_bessel_j1 =
    foreign "atg_special_bessel_j1" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_bessel_j1_out =
    foreign "atg_special_bessel_j1_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_bessel_y0 =
    foreign "atg_special_bessel_y0" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_bessel_y0_out =
    foreign "atg_special_bessel_y0_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_bessel_y1 =
    foreign "atg_special_bessel_y1" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_bessel_y1_out =
    foreign "atg_special_bessel_y1_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_t =
    foreign
      "atg_special_chebyshev_polynomial_t"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_t_n_scalar =
    foreign
      "atg_special_chebyshev_polynomial_t_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_t_n_scalar_out =
    foreign
      "atg_special_chebyshev_polynomial_t_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_t_out =
    foreign
      "atg_special_chebyshev_polynomial_t_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_t_x_scalar =
    foreign
      "atg_special_chebyshev_polynomial_t_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_t_x_scalar_out =
    foreign
      "atg_special_chebyshev_polynomial_t_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_u =
    foreign
      "atg_special_chebyshev_polynomial_u"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_u_n_scalar =
    foreign
      "atg_special_chebyshev_polynomial_u_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_u_n_scalar_out =
    foreign
      "atg_special_chebyshev_polynomial_u_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_u_out =
    foreign
      "atg_special_chebyshev_polynomial_u_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_u_x_scalar =
    foreign
      "atg_special_chebyshev_polynomial_u_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_u_x_scalar_out =
    foreign
      "atg_special_chebyshev_polynomial_u_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_v =
    foreign
      "atg_special_chebyshev_polynomial_v"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_v_n_scalar =
    foreign
      "atg_special_chebyshev_polynomial_v_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_v_n_scalar_out =
    foreign
      "atg_special_chebyshev_polynomial_v_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_v_out =
    foreign
      "atg_special_chebyshev_polynomial_v_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_v_x_scalar =
    foreign
      "atg_special_chebyshev_polynomial_v_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_v_x_scalar_out =
    foreign
      "atg_special_chebyshev_polynomial_v_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_w =
    foreign
      "atg_special_chebyshev_polynomial_w"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_w_n_scalar =
    foreign
      "atg_special_chebyshev_polynomial_w_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_w_n_scalar_out =
    foreign
      "atg_special_chebyshev_polynomial_w_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_w_out =
    foreign
      "atg_special_chebyshev_polynomial_w_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_w_x_scalar =
    foreign
      "atg_special_chebyshev_polynomial_w_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_chebyshev_polynomial_w_x_scalar_out =
    foreign
      "atg_special_chebyshev_polynomial_w_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_digamma =
    foreign "atg_special_digamma" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_digamma_out =
    foreign "atg_special_digamma_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_entr = foreign "atg_special_entr" (gc_tensor @-> returning raw_tensor)

  let stubs_special_entr_out =
    foreign "atg_special_entr_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_erf = foreign "atg_special_erf" (gc_tensor @-> returning raw_tensor)

  let stubs_special_erf_out =
    foreign "atg_special_erf_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_erfc = foreign "atg_special_erfc" (gc_tensor @-> returning raw_tensor)

  let stubs_special_erfc_out =
    foreign "atg_special_erfc_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_erfcx =
    foreign "atg_special_erfcx" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_erfcx_out =
    foreign "atg_special_erfcx_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_erfinv =
    foreign "atg_special_erfinv" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_erfinv_out =
    foreign "atg_special_erfinv_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_exp2 = foreign "atg_special_exp2" (gc_tensor @-> returning raw_tensor)

  let stubs_special_exp2_out =
    foreign "atg_special_exp2_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_expit =
    foreign "atg_special_expit" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_expit_out =
    foreign "atg_special_expit_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_expm1 =
    foreign "atg_special_expm1" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_expm1_out =
    foreign "atg_special_expm1_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_gammainc =
    foreign "atg_special_gammainc" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_gammainc_out =
    foreign
      "atg_special_gammainc_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_gammaincc =
    foreign "atg_special_gammaincc" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_gammaincc_out =
    foreign
      "atg_special_gammaincc_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_gammaln =
    foreign "atg_special_gammaln" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_gammaln_out =
    foreign "atg_special_gammaln_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_h =
    foreign
      "atg_special_hermite_polynomial_h"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_h_n_scalar =
    foreign
      "atg_special_hermite_polynomial_h_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_hermite_polynomial_h_n_scalar_out =
    foreign
      "atg_special_hermite_polynomial_h_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;
